tests/spec/pass/list_module.aja
import (
    "modules/list"
)

nums = [1, 2, 2, 3]
copy = list.clone(nums)
nums.append(9)
print(length(copy))

rev = list.reverse([1, 2, 3])
print(rev[0])
print(rev[2])

print(list.sumInt([1, 2, 3, 4]))
print(list.maxInt([5, 2, 9, 1]))
print(list.findIndexInt([4, 5, 6], 5))

uniq = list.uniqueInt(nums)
print(length(uniq))
print(uniq[2])
print(uniq[3])
