tests/spec/fail/setutil_from_range_step_zero.aja
import (
    "modules/setutil"
)

print(setutil.fromRange(1, 5, 0))
